Fixed the hero spacing issue

--- a/public/assets/styles/components/_hero.scss
+++ b/public/assets/styles/components/_hero.scss
@@ -44,6 +44,7 @@
 .c-hero__image {
     position: relative;
     bottom: -5rem;
+    margin: 0;
 
     @media (min-width: 35rem) {
         bottom: -10rem;
